[package]
name = "persisting-arrangements"
version = "0.1.0"
authors = ["Ruchir Khaitan <ruchir0001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abomonation = { git = "https://github.com/TimelyDataflow/abomonation" }
timely = { git = "https://github.com/TimelyDataflow/timely-dataflow" }
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow" }
rand = "0.7.3"
